crux-llvm/test-data/golden/golden-loop-merging/issue_478_unsafe.z3.good
[Crux] Found counterexample for verification goal
[Crux]   test-data/golden/golden-loop-merging/issue_478_unsafe.c:35:0: error: in main
[Crux]   crucible_assert
[Crux] Overall status: Invalid.
